# data-capsules

./: Cargo.toml  example.js  implementation-doc.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: README.md  basic.spec.mjs  capsule-validation.spec.mjs  consensus.spec.mjs  edge-cases.spec.mjs  error-handling.spec.mjs  file-operations.spec.mjs  index.spec.mjs  performance.spec.mjs  run-all-tests.mjs
__test__/helpers/: test-utils.mjs
example_output/: invalid.capsule
example_output/buffer_capsules/: 6be231e91b4e8481_000.capsule  6be231e91b4e8481_metadata.json
example_output/file_capsules/: 67380b13c4229a40_000.capsule  67380b13c4229a40_001.capsule  67380b13c4229a40_002.capsule  67380b13c4229a40_metadata.json
example_output/inspection_capsules/: 02ed9a8671347bd4_000.capsule  02ed9a8671347bd4_metadata.json
example_output/perf_10240/: 0f672f0d8d16aa87_000.capsule  0f672f0d8d16aa87_metadata.json
example_output/perf_2097152/: 6734e6dad803f429_metadata.json
example_output/perf_512000/: 6176458e26eeb13c_000.capsule  6176458e26eeb13c_001.capsule  6176458e26eeb13c_metadata.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: lib.rs
test_output/: 748905929adc10d3_000.capsule  748905929adc10d3_metadata.json  a591a6d40bf42040_000.capsule  a591a6d40bf42040_metadata.json  d2a84f4b8b650937_000.capsule  d2a84f4b8b650937_metadata.json
