[package]
edition = "2021"
name = "data-capsules"
version = "0.1.0"
license = "MIT"
authors = ["DIG Network"]
homepage = "https://github.com/dignetwork/data-capsules"
repository = "https://github.com/dignetwork/data-capsules"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6"] }
napi-derive = "2.12.2"
sha2 = "0.10"
hex = "0.4"

# Encryption dependencies
aes-gcm = "0.10"

# Compression dependencies  
flate2 = "1.0"

# CRC32 for header checksums
crc32fast = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# File system operations
tempfile = "3.8"

# Performance optimizations
memmap2 = "0.9"      # Memory-mapped file I/O for efficiency
smallvec = "1.11"    # Stack-allocated vectors for small data

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols" 